[package]
name = "photon_test_authentication_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.21.0", features =["full"]}
hyper = { version = "0.14.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
querystring = "1.1.0"
serde_json = "1.0"